--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,28 @@ button:hover,
   border-color: black;
 }
 
+ul {
+  padding-left: 20px;
+}
+
 .feedback-section {
   margin-top: 40px;
+}
+
+@media only screen and (max-width: 600px) {
+  input.search-input {
+    margin-top: 12px;
+    margin-left: 0;
+    padding-bottom: 12px;
+    padding-top: 12px;
+    width: 100%;
+  }
+  button {
+    display: block;
+    margin-top: 12px;
+    width: 100%;
+  }
+  ul {
+    padding-left: 12px;
+  }
 }
